feat: env file for storing sensitive data

--- a/trying_githubAPI.ipynb
+++ b/trying_githubAPI.ipynb
@@ -29,7 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +53,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "GITHUB_ACCESS_TOKEN = os.getenv('GITHUB_ACCESS_TOKEN')\n",
+    "GITHUB_REPO = os.getenv('GITHUB_REPO')\n",
+    "\n",
     "#### https://pygithub.readthedocs.io/en/latest/introduction.html\n",
     "#### https://github.com/jhojin7/HJ_second_brain\n",
     "from github import Github\n",
-    "\n",
-    "\n",
-    "\n",
-    "g = Github(access_token)\n",
-    "repo = g.get_repo(repo)\n",
+    "g = Github(GITHUB_ACCESS_TOKEN)\n",
+    "repo = g.get_repo(GITHUB_REPO)\n",
     "master = repo.get_branch(\"master\")\n",
     "mySHA = master.commit.sha\n",
     "commits = repo.get_commits(sha=mySHA)"
@@ -63,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,79 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                 message  diff            datetime  \\\n",
-      "0                        Update OAuth.md     7 2022-01-21 13:31:24   \n",
-      "1               Create technical writing    22 2022-01-21 13:31:12   \n",
-      "2              Update anvil alternatives     5 2022-01-21 12:47:20   \n",
-      "3                          Update 데이터.md     2 2022-01-21 07:20:59   \n",
-      "4            Update 패스트캠퍼스 초격차 데이터 코스.md     7 2022-01-20 12:58:35   \n",
-      "5                        Update Anvil.md     3 2022-01-20 12:58:01   \n",
-      "6                  Update python, README     6 2022-01-20 12:57:44   \n",
-      "7                       Update readme.md     4 2022-01-19 13:56:06   \n",
-      "8                           Create OAuth    14 2022-01-19 13:47:13   \n",
-      "9                           Create Anvil    21 2022-01-19 13:46:55   \n",
-      "10                      Update resources    16 2022-01-19 03:03:21   \n",
-      "11            Delete .obsidian directory   129 2022-01-18 13:53:24   \n",
-      "12            trying to update gitignore     7 2022-01-18 13:52:51   \n",
-      "13                                     .    18 2022-01-18 13:50:40   \n",
-      "14                     Update .gitignore     3 2022-01-18 13:50:25   \n",
-      "15                           Create CRUD    21 2022-01-18 13:49:33   \n",
-      "16              Update portfolio prep.md     1 2022-01-17 17:01:12   \n",
-      "17                         Update 데이터.md     7 2022-01-17 14:27:26   \n",
-      "18                      Update 패캠 후기 링크들    11 2022-01-17 14:26:34   \n",
-      "19                     Update .gitignore     1 2022-01-17 06:04:09   \n",
-      "20  Create, Add python tips from todoist    19 2022-01-17 05:59:09   \n",
-      "21                 Add new data resource     7 2022-01-17 04:39:11   \n",
-      "22                     Update .gitignore     2 2022-01-16 13:55:58   \n",
-      "23                 Create portfolio prep    29 2022-01-16 10:10:45   \n",
-      "24                    Update readme TODO    23 2022-01-16 10:10:21   \n",
-      "25                     Create .gitignore     2 2022-01-16 08:55:47   \n",
-      "26               Update readme file name     3 2022-01-16 08:54:43   \n",
-      "27                         Update README    10 2022-01-12 13:58:51   \n",
-      "28              Update Github Gist stuff    66 2022-01-12 13:57:08   \n",
-      "29                        Initial commit   188 2022-01-11 13:17:29   \n",
-      "\n",
-      "                                                  url  \n",
-      "0   https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "1   https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "2   https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "3   https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "4   https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "5   https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "6   https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "7   https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "8   https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "9   https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "10  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "11  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "12  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "13  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "14  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "15  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "16  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "17  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "18  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "19  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "20  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "21  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "22  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "23  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "24  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "25  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "26  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "27  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "28  https://github.com/jhojin7/HJ_second_brain/com...  \n",
-      "29  https://github.com/jhojin7/HJ_second_brain/com...  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_df = pd.DataFrame(filtered_commits, columns=['message','diff','datetime','url'])\n",
     "print(my_df)"
@@ -163,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,41 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Public\\Documents\\ESTsoft\\CreatorTemp\\ipykernel_25452\\4187887644.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  july_df['data'][j] += 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          dates  data\n",
-      "0    2022-01-01     0\n",
-      "1    2022-01-02     0\n",
-      "2    2022-01-03     0\n",
-      "3    2022-01-04     0\n",
-      "4    2022-01-05     0\n",
-      "..          ...   ...\n",
-      "360  2022-12-27     0\n",
-      "361  2022-12-28     0\n",
-      "362  2022-12-29     0\n",
-      "363  2022-12-30     0\n",
-      "364  2022-12-31     0\n",
-      "\n",
-      "[365 rows x 2 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "####### 커밋 날짜에다가 갯수 +=해주는건데,,, 이거 너무 노가다임. 쉽게 할 수있는거 없나??????????\n",
     "# my_df.loc[my_df['datetime'].date() == july_df['dates'].date()]\n",
@@ -279,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
