fix: change output format from stdout to file output

--- a/leetcode-getRecents.ipynb
+++ b/leetcode-getRecents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,16 @@
     "import requests\n",
     "import json\n",
     "import pandas as pd\n",
+    "import datetime\n",
     "import time\n",
+    "import os\n",
     "\n",
     "username = 'jhojin7'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,63 +54,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recents_df = get_recentSubmissions(username)\n",
-    "recents_df.head()\n",
-    "# recents_df.columns\n",
-    "\n",
-    "recents_df = recents_df.filter(['titleSlug','statusDisplay','timestamp'])\n",
-    "recents_df = recents_df.rename(columns={'titleSlug':'Title', 'statusDisplay':'Status','timestamp':'Datetime'})\n",
-    "print(f\"{username}'s Most Recent Submissions:\")\n",
-    "# print(recents_df.sort_values(by='timestamp'))\n",
-    "\n",
-    "# times = recents_df['timestamp']\n",
-    "for t in recents_df['Datetime']:\n",
-    "    dtext = time.gmtime(int(t))\n",
-    "    new_t = \"%d-%02d-%02d %02d:%02d:%02d\" %(dtext.tm_year,dtext.tm_mon,dtext.tm_mday,dtext.tm_hour,dtext.tm_min,dtext.tm_sec)\n",
-    "    # print(t,new_t)\n",
-    "    recents_df['Datetime'] = new_t\n",
-    "\n",
-    "print(recents_df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Title         Status             Datetime\n",
-      "0  binary-search       Accepted  2022-02-06 10:33:05\n",
-      "1  binary-search  Runtime Error  2022-02-06 10:33:05\n",
-      "2  binary-search       Accepted  2022-02-06 10:33:05\n",
-      "3  binary-search  Runtime Error  2022-02-06 10:33:05\n",
-      "4  binary-search   Wrong Answer  2022-02-06 10:33:05\n"
+      "https://leetcode.com/graphql/\n",
+      "200\n"
      ]
     }
    ],
    "source": [
-    "print(recents_df.head())\n",
+    "recents_df = get_recentSubmissions(username)\n",
+    "recents_df.head()\n",
+    "\n",
+    "# filter and rename only the content I need\n",
+    "recents_df = recents_df.filter(['titleSlug','statusDisplay','timestamp'])\n",
+    "recents_df = recents_df.rename(columns={'titleSlug':'Title', 'statusDisplay':'Status','timestamp':'Datetime'})\n",
     "\n",
     "\n",
+    "# change datetime format from epoch-seconds to iso8601\n",
+    "for t in recents_df['Datetime']:\n",
+    "    # stop if datetime is already string format\n",
+    "    if t.isnumeric() == False: break\n",
+    "    dtext = time.gmtime(int(t))\n",
+    "    # iso8601 datetime format string\n",
+    "    new_t = \"%d-%02d-%02d %02d:%02d:%02d\" %(dtext.tm_year,dtext.tm_mon,dtext.tm_mday,dtext.tm_hour,dtext.tm_min,dtext.tm_sec)\n",
+    "    recents_df['Datetime'] = new_t\n",
+    "\n",
+    "# output content\n",
+    "# print(f\"{username}'s Most Recent Submissions:\")\n",
+    "# print(recents_df)\n",
+    "\n",
+    "# write to file\n",
+    "today = time.time()\n",
+    "now = time.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "output = f\"\"\"{username}'s Most Recent Submissions:\n",
+    "Updated: {now}\\n\n",
+    "\"\"\"\n",
+    "with open(\"README_.md\",'w') as f:\n",
+    "    f.writelines(output)\n",
+    "    f.writelines(str(recents_df.head(10)))\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# for q in recents_df.itertuples():\n",
     "#     # print(q)\n",
     "#     titleSlug = q.titleSlug\n",
     "#     questionLink = f\"https://leetcode.com/problems/{titleSlug}\"\n",
     "#     submissionLink = f\"https://\"\n",
     "#     print(questionLink)\n",
-    "#     # print(submissionLink)\n"
+    "#     # print(submissionLink)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
