--- a/leetcode-getRecents.ipynb
+++ b/leetcode-getRecents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -91,18 +100,21 @@
     "# write to file\n",
     "today = time.time()\n",
     "now = time.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "output = f\"\"\"{username}'s Most Recent Submissions:\n",
+    "output = f\"\"\"# {username}'s Most Recent Submissions:\\n\n",
     "Updated: {now}\\n\n",
     "\"\"\"\n",
+    "\n",
     "with open(\"README_.md\",'w') as f:\n",
+    "    # output text\n",
     "    f.writelines(output)\n",
-    "    f.writelines(str(recents_df.head(10)))\n",
+    "    # 10 top rows to markdown table\n",
+    "    f.writelines(str(recents_df.head(10).to_markdown()))\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
