fix: naming, functions, gmtime to localtime

--- a/leetcode-getRecents.ipynb
+++ b/leetcode-getRecents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
     "import time\n",
     "import os\n",
     "\n",
-    "username = 'jhojin7'"
+    "USERNAME = 'jhojin7'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_recentSubmissions(username):\n",
+    "def get_recents(username):\n",
     "    base_url = 'https://leetcode.com/graphql/'\n",
     "    url = base_url\n",
     "    print(url)\n",
@@ -63,7 +63,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_recents():\n",
+    "    recents_df = get_recents(USERNAME)\n",
+    "    recents_df.head()\n",
+    "    # filter and rename only the content I need\n",
+    "    recents_df = recents_df.filter(['titleSlug','statusDisplay','timestamp'])\n",
+    "    recents_df = recents_df.rename(columns={'titleSlug':'Title', 'statusDisplay':'Status','timestamp':'Datetime'})\n",
+    "\n",
+    "    # change datetime format from epoch-seconds to iso8601\n",
+    "    for t in recents_df['Datetime']:\n",
+    "        # stop if datetime is already string format\n",
+    "        if t.isnumeric() == False: break\n",
+    "        dtext = time.localtime(int(t))\n",
+    "        # iso8601 datetime format string\n",
+    "        new_t = \"%d-%02d-%02d %02d:%02d:%02d\" %(dtext.tm_year,dtext.tm_mon,dtext.tm_mday,dtext.tm_hour,dtext.tm_min,dtext.tm_sec)\n",
+    "        recents_df['Datetime'] = new_t\n",
+    "\n",
+    "    # output content\n",
+    "    # print(f\"{username}'s Most Recent Submissions:\")\n",
+    "    # print(recents_df)\n",
+    "\n",
+    "    # write to file\n",
+    "    today = time.time()\n",
+    "    now = time.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "    output = f\"\"\"# {USERNAME}'s Most Recent Submissions:\\nUpdated: {now}\\n\"\"\"\n",
+    "\n",
+    "    with open(\"README_.md\",'w') as f:\n",
+    "        # output text\n",
+    "        f.writelines(output)\n",
+    "        # 10 top rows to markdown table\n",
+    "        f.writelines(str(recents_df.head(10).to_markdown()))\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -76,45 +115,50 @@
     }
    ],
    "source": [
-    "recents_df = get_recentSubmissions(username)\n",
-    "recents_df.head()\n",
-    "\n",
-    "# filter and rename only the content I need\n",
-    "recents_df = recents_df.filter(['titleSlug','statusDisplay','timestamp'])\n",
-    "recents_df = recents_df.rename(columns={'titleSlug':'Title', 'statusDisplay':'Status','timestamp':'Datetime'})\n",
-    "\n",
-    "\n",
-    "# change datetime format from epoch-seconds to iso8601\n",
-    "for t in recents_df['Datetime']:\n",
-    "    # stop if datetime is already string format\n",
-    "    if t.isnumeric() == False: break\n",
-    "    dtext = time.gmtime(int(t))\n",
-    "    # iso8601 datetime format string\n",
-    "    new_t = \"%d-%02d-%02d %02d:%02d:%02d\" %(dtext.tm_year,dtext.tm_mon,dtext.tm_mday,dtext.tm_hour,dtext.tm_min,dtext.tm_sec)\n",
-    "    recents_df['Datetime'] = new_t\n",
-    "\n",
-    "# output content\n",
-    "# print(f\"{username}'s Most Recent Submissions:\")\n",
-    "# print(recents_df)\n",
-    "\n",
-    "# write to file\n",
-    "today = time.time()\n",
-    "now = time.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "output = f\"\"\"# {username}'s Most Recent Submissions:\\n\n",
-    "Updated: {now}\\n\n",
-    "\"\"\"\n",
-    "\n",
-    "with open(\"README_.md\",'w') as f:\n",
-    "    # output text\n",
-    "    f.writelines(output)\n",
-    "    # 10 top rows to markdown table\n",
-    "    f.writelines(str(recents_df.head(10).to_markdown()))\n",
-    "f.close()"
+    "update_recents()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "query_dailyCodingChallenge = \"\"\"\n",
+    "    query questionOfToday {\n",
+    "  activeDailyCodingChallengeQuestion {\n",
+    "    date\n",
+    "    userStatus\n",
+    "    link\n",
+    "    question {\n",
+    "      acRate\n",
+    "      difficulty\n",
+    "      freqBar\n",
+    "      frontendQuestionId: questionFrontendId\n",
+    "      isFavor\n",
+    "      paidOnly: isPaidOnly\n",
+    "      status\n",
+    "      title\n",
+    "      titleSlug\n",
+    "      hasVideoSolution\n",
+    "      hasSolution\n",
+    "      topicTags {\n",
+    "        name\n",
+    "        id\n",
+    "        slug\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
