new: get_dailyChallenges, fix func, file names

--- a/leetcode-getRecents.ipynb
+++ b/leetcode-getRecents.ipynb
@@ -2,25 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://jerrynsh.com/how-i-sync-daily-leetcoding-challenge-to-todoist/\n",
-    "# https://towardsdatascience.com/connecting-to-a-graphql-api-using-python-246dda927840\n",
-    "import requests\n",
-    "import json\n",
-    "import pandas as pd\n",
-    "import datetime\n",
-    "import time\n",
-    "import os\n",
-    "\n",
-    "USERNAME = 'jhojin7'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import datetime\n",
+    "import time\n",
+    "import os\n",
+    "# https://jerrynsh.com/how-i-sync-daily-leetcoding-challenge-to-todoist/\n",
+    "# https://towardsdatascience.com/connecting-to-a-graphql-api-using-python-246dda927840\n",
+    "\n",
+    "USERNAME = 'jhojin7'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,17 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def update_recents():\n",
     "    recents_df = get_recents(USERNAME)\n",
     "    recents_df.head()\n",
     "    # filter and rename only the content I need\n",
     "    recents_df = recents_df.filter(['titleSlug','statusDisplay','timestamp'])\n",
     "    recents_df = recents_df.rename(columns={'titleSlug':'Title', 'statusDisplay':'Status','timestamp':'Datetime'})\n",
-    "\n",
     "    # change datetime format from epoch-seconds to iso8601\n",
     "    for t in recents_df['Datetime']:\n",
     "        # stop if datetime is already string format\n",
@@ -92,7 +92,7 @@
     "    now = time.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
     "    output = f\"\"\"# {USERNAME}'s Most Recent Submissions:\\nUpdated: {now}\\n\"\"\"\n",
     "\n",
-    "    with open(\"README_.md\",'w') as f:\n",
+    "    with open(\"leetcode-recents.md\",'w') as f:\n",
     "        # output text\n",
     "        f.writelines(output)\n",
     "        # 10 top rows to markdown table\n",
@@ -102,63 +102,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update_recents()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://leetcode.com/graphql/\n",
-      "200\n"
+      "https://leetcode.com/graphql/ 200\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>userStatus</th>\n",
+       "      <th>link</th>\n",
+       "      <th>question</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-02-01</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/best-time-to-buy-and-sell-stock/</td>\n",
+       "      <td>{'questionFrontendId': '121', 'title': 'Best T...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-02-02</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/find-all-anagrams-in-a-string/</td>\n",
+       "      <td>{'questionFrontendId': '438', 'title': 'Find A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-02-03</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/4sum-ii/</td>\n",
+       "      <td>{'questionFrontendId': '454', 'title': '4Sum I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-02-04</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/contiguous-array/</td>\n",
+       "      <td>{'questionFrontendId': '525', 'title': 'Contig...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-02-05</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/merge-k-sorted-lists/</td>\n",
+       "      <td>{'questionFrontendId': '23', 'title': 'Merge k...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2022-02-06</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/remove-duplicates-from-sorted-array-ii/</td>\n",
+       "      <td>{'questionFrontendId': '80', 'title': 'Remove ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2022-02-07</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/find-the-difference/</td>\n",
+       "      <td>{'questionFrontendId': '389', 'title': 'Find t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2022-02-08</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/add-digits/</td>\n",
+       "      <td>{'questionFrontendId': '258', 'title': 'Add Di...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date userStatus                                               link  \\\n",
+       "0  2022-02-01   NotStart         /problems/best-time-to-buy-and-sell-stock/   \n",
+       "1  2022-02-02   NotStart           /problems/find-all-anagrams-in-a-string/   \n",
+       "2  2022-02-03   NotStart                                 /problems/4sum-ii/   \n",
+       "3  2022-02-04   NotStart                        /problems/contiguous-array/   \n",
+       "4  2022-02-05   NotStart                    /problems/merge-k-sorted-lists/   \n",
+       "5  2022-02-06   NotStart  /problems/remove-duplicates-from-sorted-array-ii/   \n",
+       "6  2022-02-07   NotStart                     /problems/find-the-difference/   \n",
+       "7  2022-02-08   NotStart                              /problems/add-digits/   \n",
+       "\n",
+       "                                            question  \n",
+       "0  {'questionFrontendId': '121', 'title': 'Best T...  \n",
+       "1  {'questionFrontendId': '438', 'title': 'Find A...  \n",
+       "2  {'questionFrontendId': '454', 'title': '4Sum I...  \n",
+       "3  {'questionFrontendId': '525', 'title': 'Contig...  \n",
+       "4  {'questionFrontendId': '23', 'title': 'Merge k...  \n",
+       "5  {'questionFrontendId': '80', 'title': 'Remove ...  \n",
+       "6  {'questionFrontendId': '389', 'title': 'Find t...  \n",
+       "7  {'questionFrontendId': '258', 'title': 'Add Di...  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "update_recents()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# query_dailyCodingChallenge = \"\"\"\n",
+    "# query dailyCodingQuestionRecords(year: %s, month: %s) {\n",
+    "#   dailyCodingChallengeV2(year: %s, month: %s) {\n",
+    "#     challenges {\n",
+    "#       date\n",
+    "#       userStatus\n",
+    "#       link\n",
+    "#       question {\n",
+    "#         questionFrontendId\n",
+    "#         title\n",
+    "#         titleSlug\n",
+    "#       }\n",
+    "#     }\n",
+    "#     weeklyChallenges {\n",
+    "#       date\n",
+    "#       userStatus\n",
+    "#       link\n",
+    "#       question {\n",
+    "#         questionFrontendId\n",
+    "#         title\n",
+    "#         titleSlug\n",
+    "#       }\n",
+    "#     }\n",
+    "#   }\n",
+    "# }\n",
+    "# \"\"\" %(yyyy, mm, yyyy, mm)\n",
     "\n",
+    "def f_write(fname,lines):\n",
+    "    with open(fname,'w') as f:\n",
+    "        f.writelines(lines)\n",
+    "    f.close()\n",
+    "\n",
+    "yyyy = '2022'\n",
+    "mm = '2'\n",
     "query_dailyCodingChallenge = \"\"\"\n",
-    "    query questionOfToday {\n",
-    "  activeDailyCodingChallengeQuestion {\n",
-    "    date\n",
-    "    userStatus\n",
-    "    link\n",
-    "    question {\n",
-    "      acRate\n",
-    "      difficulty\n",
-    "      freqBar\n",
-    "      frontendQuestionId: questionFrontendId\n",
-    "      isFavor\n",
-    "      paidOnly: isPaidOnly\n",
-    "      status\n",
-    "      title\n",
-    "      titleSlug\n",
-    "      hasVideoSolution\n",
-    "      hasSolution\n",
-    "      topicTags {\n",
-    "        name\n",
-    "        id\n",
-    "        slug\n",
+    "query {\n",
+    "  dailyCodingChallengeV2(year: %s, month: %s) {\n",
+    "    challenges {\n",
+    "      date\n",
+    "      userStatus\n",
+    "      link\n",
+    "      question {\n",
+    "        questionFrontendId\n",
+    "        title\n",
+    "        titleSlug\n",
+    "      }\n",
+    "    }\n",
+    "    weeklyChallenges {\n",
+    "      date\n",
+    "      userStatus\n",
+    "      link\n",
+    "      question {\n",
+    "        questionFrontendId\n",
+    "        title\n",
+    "        titleSlug\n",
     "      }\n",
     "    }\n",
     "  }\n",
     "}\n",
-    "\"\"\"\n",
+    "\"\"\" %(yyyy, mm)#, yyyy, mm)\n",
     "\n",
-    "    "
+    "def get_dailyChallenges(query):\n",
+    "  base_url = 'https://leetcode.com/graphql/'\n",
+    "  url = base_url\n",
+    "  # https://towardsdatascience.com/connecting-to-a-graphql-api-using-python-246dda927840\n",
+    "  # return requests.post(url,headers=headers,data=new_query)\n",
+    "  result = requests.post(url,json={'query':query})\n",
+    "  print(url, result.status_code)\n",
+    "  json_dump = json.loads(result.text)\n",
+    "  # print(json_dump)\n",
+    "  dailyChallenges = json_dump['data']['dailyCodingChallengeV2']['challenges']\n",
+    "  # print(dailyChallenges)\n",
+    "  daily_df = pd.DataFrame(dailyChallenges)\n",
+    "  f_write('leetcode_daily_%s-%0s.md'%(yyyy,mm),daily_df.to_markdown())\n",
+    "  return daily_df\n",
+    "  # print(daily_df)\n",
+    "\n",
+    "daily_df = get_dailyChallenges(query_dailyCodingChallenge)\n",
+    "daily_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121 best-time-to-buy-and-sell-stock\n"
+     ]
+    }
+   ],
+   "source": [
+    "# data.dailyCodingChallengeV2.challenges[1].question.questionFrontendId\n",
+    "daily_df['question']\n",
+    "titleSlug = daily_df['question'][0]['titleSlug']\n",
+    "qId = daily_df['question'][0]['questionFrontendId']\n",
+    "print(qId, titleSlug)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
