fix: update_recents

--- a/leetcode-getRecents.ipynb
+++ b/leetcode-getRecents.ipynb
@@ -63,9 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://leetcode.com/graphql/\n",
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def update_recents():\n",
@@ -97,16 +106,8 @@
     "        f.writelines(output)\n",
     "        # 10 top rows to markdown table\n",
     "        f.writelines(str(recents_df.head(10).to_markdown()))\n",
-    "    f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# update_recents()"
+    "    f.close()\n",
+    "update_recents()"
    ]
   },
   {
